4: Trying to fix formatting issues on mobile devices

--- a/consumer.css
+++ b/consumer.css
@@ -4,7 +4,6 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
 .content.close {
     transition: all 0.4s ease-in;
@@ -18,6 +17,7 @@ body {
 }
 .content #shameless_product_placement_logo:hover {
     opacity: 90%;
+    transition: opacity 250ms linear;
 }
 .content #shih_tzu {
     height: 10px;
@@ -61,4 +61,5 @@ body {
 }
 .content #shih_zoo_download:hover {
     opacity: 90%;
+    transition: opacity 250ms linear;
 }
